# mdpdf

./: .gitignore  Dockerfile  Makefile  README.md  mdpdf-wrapper  mdpdf.cmd  pyproject.toml
config/: mermaid.config.json  pandoc-header.tex  puppeteer.json
src/mdpdf/: cli.py  config.py  convert.py  extract.py  naming.py  render.py
tests/: conftest.py  test_cli.py  test_config.py  test_convert.py  test_extract.py  test_integration.py  test_naming.py  test_render.py
