[project]
name = "mdpdf"
version = "0.1.0"
description = "Dockerized Markdown-to-PDF CLI with Mermaid diagram support"
readme = "README.md"
authors = [
    { name = "lawso017", email = "lawson.bj@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mdpdf = "mdpdf.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
